--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,8 +1,13 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
+.header {
+  font-size: 20px;
+  font-weight: 900;
+}
+
 .title {
   font-family: "Sacramento", cursive;
-  font-size: 60px;
+  font-size: 50px;
   font-weight: 700;
   justify-content: center;
   text-align: center;
